<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp">

        <TextView
            android:layout_width="38dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/nama"
            android:textColor="@color/black"
            android:textSize="25dp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/edit_nama"
            android:layout_width="0dp"
            android:layout_weight="5"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:backgroundTint="@color/black"
            android:hint="@string/input_nama"
            android:lines="1"
            android:textColorHint="@color/black"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp">

        <TextView
            android:layout_width="38dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/usia"
            android:textSize="25dp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/edit_usia"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:layout_marginLeft="10dp"
            android:backgroundTint="@color/black"
            android:inputType="numberDecimal"
            android:hint="@string/input_usia"
            android:lines="1"
            android:textColorHint="@color/black"/>

    </LinearLayout>

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="10dp"
    android:layout_marginBottom="10dp">

    <TextView
        android:layout_width="38dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/berat"
        android:textSize="25dp"
        android:textStyle="bold"
        />

    <EditText
        android:id="@+id/edit_berat"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="5"
        android:layout_marginLeft="10dp"
        android:backgroundTint="@color/black"
        android:inputType="numberDecimal"
        android:hint="@string/input_berat"
        android:textColorHint="@color/black" />

</LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp">

        <TextView
            android:layout_width="38dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/tinggi"
            android:textSize="25dp"
            android:textStyle="bold"/>

        <EditText
            android:id="@+id/edit_tinggi"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:layout_marginLeft="10dp"
            android:backgroundTint="@color/black"
            android:inputType="numberDecimal"
            android:hint="@string/input_tinggi"
            android:textColorHint="@color/black"/>

    </LinearLayout>



    <Button
        android:id="@+id/hasil_hitung"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/btnhitung"/>

</LinearLayout>