<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".SecondActivity">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/bmi"
        android:textStyle="bold"
        android:textSize="30sp"
        android:gravity="center"
        />

    <TextView
        android:id="@+id/receive_nama"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/nama"
        android:textStyle="bold"
        android:textSize="25dp"
        android:layout_marginTop="10dp"
        />

    <TextView
        android:id="@+id/receive_usia"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/usia"
        android:textStyle="bold"
        android:textSize="25dp"
        android:layout_marginTop="10dp"/>

    <TextView
        android:id="@+id/bmiresult"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Hasil BMI Anda"
        android:textStyle="bold"
        android:textSize="25dp"
        android:gravity="center_horizontal"
        android:layout_marginTop="10dp"/>

    <TextView
        android:id="@+id/idealStatus"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/keterangan"
        android:textStyle="bold"
        android:textSize="25dp"
        android:gravity="center"
        android:layout_marginTop="10dp"/>



</LinearLayout>